--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -83,6 +83,7 @@
 		"three": "0.146.0",
 		"throttle-debounce": "5.0.0",
 		"tinycolor2": "1.6.0",
+		"tinyld": "1.3.4",
 		"tsc-alias": "1.8.7",
 		"tsconfig-paths": "4.2.0",
 		"twemoji-parser": "14.0.0",
