--- a/.config/example.yml
+++ b/.config/example.yml
@@ -29,7 +29,7 @@ url: https://example.com/
 # The port that your Firefish server should listen on.
 port: 3000
 
-# The bind host your Calckey server should listen on.
+# The bind host your Firefish server should listen on.
 # If unspecified, the wildcard address will be used.
 #bind: 127.0.0.1
 
