--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,7 @@
 		"revertmigration:cargo": "./native-utils/built/migration down",
 		"check:connect": "node ./check_connect.js",
 		"build": "pnpm swc src -d built -D",
+		"build:debug": "pnpm swc src -d built -s -D",
 		"watch": "pnpm swc src -d built -D -w",
 		"lint": "pnpm rome check --apply *",
 		"mocha": "cross-env NODE_ENV=test TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true TS_NODE_PROJECT=\"./test/tsconfig.json\" mocha",
