--- a/packages/backend/native-utils/migration/Cargo.toml
+++ b/packages/backend/native-utils/migration/Cargo.toml
@@ -10,11 +10,11 @@ path = "src/lib.rs"
 
 [features]
 default = []
-convert = ["dep:native-utils", "dep:indicatif", "dep:futures"]
+convert = ["dep:indicatif", "dep:futures"]
 
 [dependencies]
 serde_json = "1.0.96"
-native-utils = { path = "../", optional = true }
+native-utils = { path = "../" }
 indicatif = { version = "0.17.4", features = ["tokio"], optional = true }
 tokio = { version = "1.28.2", features = ["full"] }
 futures = { version = "0.3.28", optional = true }
