--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,16 +26,16 @@
 		"@tensorflow/tfjs-node": "3.21.1"
 	},
 	"dependencies": {
-		"@bull-board/api": "5.6.0",
-		"@bull-board/koa": "5.6.0",
-		"@bull-board/ui": "5.6.0",
+		"@bull-board/api": "5.7.2",
+		"@bull-board/koa": "5.7.2",
+		"@bull-board/ui": "5.7.2",
 		"@discordapp/twemoji": "14.1.2",
 		"@elastic/elasticsearch": "7.17.0",
 		"@koa/cors": "3.4.3",
 		"@koa/multer": "3.0.2",
 		"@koa/router": "9.0.1",
 		"@peertube/http-signature": "1.7.0",
-		"@redocly/openapi-core": "1.0.0-beta.131",
+		"@redocly/openapi-core": "1.0.2",
 		"@sinonjs/fake-timers": "9.1.2",
 		"@syuilo/aiscript": "0.11.1",
 		"@tensorflow/tfjs": "^4.2.0",
@@ -49,9 +49,8 @@
 		"axios": "^1.4.0",
 		"bcryptjs": "2.4.3",
 		"blurhash": "2.0.5",
-		"bull": "4.10.4",
+		"bull": "4.11.2",
 		"cacheable-lookup": "7.0.0",
-		"firefish-js": "workspace:*",
 		"cbor": "8.1.0",
 		"chalk": "5.3.0",
 		"chalk-template": "0.4.0",
@@ -65,6 +64,7 @@
 		"escape-regexp": "0.0.1",
 		"feed": "4.2.2",
 		"file-type": "17.1.6",
+		"firefish-js": "workspace:*",
 		"fluent-ffmpeg": "2.1.2",
 		"got": "12.5.3",
 		"gunzip-maybe": "^1.4.2",
@@ -92,18 +92,18 @@
 		"meilisearch": "0.33.0",
 		"mfm-js": "0.23.3",
 		"mime-types": "2.1.35",
-		"msgpackr": "1.9.5",
+		"msgpackr": "1.9.6",
 		"multer": "1.4.4-lts.1",
 		"native-utils": "link:native-utils",
 		"nested-property": "4.0.0",
-		"node-fetch": "3.3.1",
-		"nodemailer": "6.9.3",
+		"node-fetch": "3.3.2",
+		"nodemailer": "6.9.4",
 		"nsfwjs": "2.4.2",
 		"oauth": "^0.10.0",
 		"os-utils": "0.0.14",
-		"otpauth": "^9.1.3",
+		"otpauth": "^9.1.4",
 		"parse5": "7.1.2",
-		"pg": "8.11.1",
+		"pg": "8.11.2",
 		"private-ip": "2.3.4",
 		"probe-image-size": "7.2.3",
 		"promise-limit": "2.7.0",
@@ -113,37 +113,37 @@
 		"qs": "6.11.2",
 		"random-seed": "0.3.0",
 		"ratelimiter": "3.4.1",
-		"re2": "1.19.1",
+		"re2": "1.20.1",
 		"redis-lock": "0.1.4",
-		"redis-semaphore": "5.3.1",
+		"redis-semaphore": "5.4.0",
 		"reflect-metadata": "0.1.13",
 		"rename": "1.0.4",
 		"rndstr": "1.0.0",
 		"rss-parser": "3.13.0",
-		"sanitize-html": "2.10.0",
+		"sanitize-html": "2.11.0",
 		"seedrandom": "^3.0.5",
 		"semver": "7.5.4",
-		"sharp": "0.32.1",
+		"sharp": "0.32.4",
 		"sonic-channel": "^1.3.1",
 		"stringz": "2.1.0",
 		"summaly": "2.7.0",
 		"syslog-pro": "1.0.0",
-		"systeminformation": "5.17.17",
+		"systeminformation": "5.18.13",
 		"tar-stream": "^3.1.6",
-		"tesseract.js": "^3.0.3",
-		"tinycolor2": "1.5.2",
+		"tesseract.js": "^4.1.1",
+		"tinycolor2": "1.6.0",
 		"tmp": "0.2.1",
 		"twemoji-parser": "14.0.0",
 		"typeorm": "0.3.17",
 		"ulid": "2.3.0",
 		"uuid": "9.0.0",
-		"web-push": "3.6.3",
+		"web-push": "3.6.4",
 		"websocket": "1.0.34",
 		"xev": "3.0.2"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.62",
-		"@swc/core": "^1.3.68",
+		"@swc/core": "^1.3.75",
 		"@types/adm-zip": "^0.5.0",
 		"@types/bcryptjs": "2.4.2",
 		"@types/cbor": "6.0.0",
@@ -153,7 +153,7 @@
 		"@types/jsdom": "21.1.1",
 		"@types/jsonld": "1.5.9",
 		"@types/jsrsasign": "10.5.8",
-		"@types/koa": "2.13.6",
+		"@types/koa": "2.13.8",
 		"@types/koa-bodyparser": "4.3.10",
 		"@types/koa-cors": "0.0.2",
 		"@types/koa-favicon": "2.0.21",
@@ -167,7 +167,7 @@
 		"@types/mocha": "9.1.1",
 		"@types/node": "18.11.18",
 		"@types/node-fetch": "3.0.3",
-		"@types/nodemailer": "6.4.8",
+		"@types/nodemailer": "6.4.9",
 		"@types/oauth": "0.9.1",
 		"@types/probe-image-size": "^7.2.0",
 		"@types/pug": "2.0.6",
@@ -188,7 +188,7 @@
 		"@types/websocket": "1.0.5",
 		"@types/ws": "8.5.5",
 		"cross-env": "7.0.3",
-		"eslint": "^8.44.0",
+		"eslint": "^8.46.0",
 		"execa": "6.1.0",
 		"json5-loader": "4.0.1",
 		"mocha": "10.2.0",
@@ -199,7 +199,7 @@
 		"ts-node": "10.9.1",
 		"tsconfig-paths": "4.2.0",
 		"typescript": "5.1.6",
-		"webpack": "^5.88.1",
+		"webpack": "^5.88.2",
 		"ws": "8.13.0"
 	}
 }
