--- a/packages/backend/native-utils/migration/Cargo.toml
+++ b/packages/backend/native-utils/migration/Cargo.toml
@@ -10,11 +10,11 @@ path = "src/lib.rs"
 
 [features]
 default = []
-convert = ["dep:indicatif", "dep:futures"]
+convert = ["dep:native-utils", "dep:indicatif", "dep:futures"]
 
 [dependencies]
 serde_json = "1.0.96"
-native-utils = { path = "../" }
+native-utils = { path = "../", optional = true }
 indicatif = { version = "0.17.4", features = ["tokio"], optional = true }
 tokio = { version = "1.28.2", features = ["full"] }
 futures = { version = "0.3.28", optional = true }
@@ -24,6 +24,7 @@ urlencoding = "2.1.2"
 redis = { version = "0.23.0", features = ["tokio-rustls-comp"] }
 sea-orm = "0.11.3"
 url = { version = "2.4.0", features = ["serde"] }
+basen = "0.1.0"
 
 [dependencies.sea-orm-migration]
 version = "0.11.0"
