--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "firefish",
-	"version": "1.0.5-dev11",
+	"version": "1.0.5-dev12",
 	"codename": "aqua",
 	"repository": {
 		"type": "git",
 		"url": "https://code.naskya.net/naskya/firefish"
 	},
-	"packageManager": "pnpm@8.7.1",
+	"packageManager": "pnpm@8.7.4",
 	"private": true,
 	"scripts": {
 		"rebuild": "pnpm run clean && ./scripts/build-greet.sh && pnpm -r --parallel run build && pnpm run gulp",
@@ -42,6 +42,10 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.0.0",
+		"@biomejs/cli-darwin-arm64": "^1.0.0",
+		"@biomejs/cli-darwin-x64": "^1.0.0",
+		"@biomejs/cli-linux-arm64": "^1.0.0",
+		"@biomejs/cli-linux-x64": "^1.0.0",
 		"@types/gulp": "4.0.13",
 		"@types/gulp-rename": "2.0.2",
 		"@types/node": "20.5.8",
