--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "firefish",
-	"version": "1.0.5-dev12",
+	"version": "1.0.4-beta31",
 	"codename": "aqua",
 	"repository": {
 		"type": "git",
 		"url": "https://code.naskya.net/naskya/firefish"
 	},
-	"packageManager": "pnpm@8.7.4",
+	"packageManager": "pnpm@8.7.6",
 	"private": true,
 	"scripts": {
 		"rebuild": "pnpm run clean && ./scripts/build-greet.sh && pnpm -r --parallel run build && pnpm run gulp",
