--- a/packages/firefish-js/package.json
+++ b/packages/firefish-js/package.json
@@ -23,7 +23,8 @@
 		"@microsoft/api-extractor": "^7.36.0",
 		"@microsoft/api-documenter": "^7.22.21",
 		"@swc/cli": "^0.1.62",
-		"@swc/core": "^1.3.62",
+		"@swc/core": "1.3.78",
+		"@types/jest": "^27.4.0",
 		"@types/node": "20.3.1",
 		"mock-socket": "^9.0.8",
 		"ts-node": "10.4.0",
