--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,13 @@ version: "3"
 
 services:
   web:
-    image: registry.joinfirefish.org/firefish/firefish
+    image: firefish
+    build: .
     container_name: firefish_web
     restart: unless-stopped
     depends_on:
       - db
       - redis
-### Uncomment one of the following to use a search engine
-#     - meilisearch
-#     - sonic
     ports:
       - "3000:3000"
     networks:
@@ -33,7 +31,7 @@ services:
 
   db:
     restart: unless-stopped
-    image: docker.io/postgres:12.2-alpine
+    image: docker.io/groonga/pgroonga:latest-alpine-12
     container_name: firefish_db
     networks:
       - calcnet
@@ -41,33 +39,6 @@ services:
       - .config/docker.env
     volumes:
       - ./db:/var/lib/postgresql/data
-
-### Only one of the below should be used.
-### Meilisearch is better overall, but resource-intensive. Sonic is a very light full text search engine.
-
-#  meilisearch:
-#    container_name: meilisearch
-#    image: getmeili/meilisearch:v1.1.1
-#    environment:
-#      - MEILI_ENV=${MEILI_ENV:-development}
-#    ports:
-#      - "7700:7700"
-#    networks:
-#      - calcnet
-#    volumes:
-#      - ./meili_data:/meili_data
-#    restart: unless-stopped
-
-#  sonic:
-#    restart: unless-stopped
-#    image: docker.io/valeriansaliou/sonic:v1.4.0
-#    logging:
-#     driver: none
-#    networks:
-#      - calcnet
-#    volumes:
-#      - ./sonic:/var/lib/sonic/store
-#      - ./sonic/config.cfg:/etc/sonic.cfg
 
 networks:
   calcnet:
