--- a/package.json
+++ b/package.json
@@ -29,22 +29,22 @@
 		"cleanall": "pnpm run clean-all"
 	},
 	"resolutions": {
-		"chokidar": "^3.3.1"
+		"chokidar": "3.3.1"
 	},
 	"dependencies": {
 		"@bull-board/api": "5.8.0",
 		"@bull-board/ui": "5.8.0",
-		"@napi-rs/cli": "^2.16.2",
-		"@tensorflow/tfjs": "^4.10.0",
+		"@napi-rs/cli": "2.16.2",
+		"@tensorflow/tfjs": "4.10.0",
 		"js-yaml": "4.1.0",
-		"seedrandom": "^3.0.5"
+		"seedrandom": "3.0.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.0.0",
-		"@biomejs/cli-darwin-arm64": "^1.0.0",
-		"@biomejs/cli-darwin-x64": "^1.0.0",
-		"@biomejs/cli-linux-arm64": "^1.0.0",
-		"@biomejs/cli-linux-x64": "^1.0.0",
+		"@biomejs/cli-darwin-arm64": "1.0.0",
+		"@biomejs/cli-darwin-x64": "1.0.0",
+		"@biomejs/cli-linux-arm64": "1.0.0",
+		"@biomejs/cli-linux-x64": "1.0.0",
 		"@types/gulp": "4.0.13",
 		"@types/gulp-rename": "2.0.2",
 		"@types/node": "20.5.8",
@@ -56,7 +56,7 @@
 		"gulp-rename": "2.0.0",
 		"gulp-replace": "1.1.4",
 		"gulp-terser": "2.1.0",
-		"install-peers": "^1.0.4",
+		"install-peers": "1.0.4",
 		"pnpm": "8.10.0",
 		"typescript": "5.2.2"
 	}
