--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -36,34 +36,34 @@
 		"@redocly/openapi-core": "1.0.2",
 		"@sinonjs/fake-timers": "9.1.2",
 		"@syuilo/aiscript": "0.11.1",
-		"@tensorflow/tfjs": "^4.2.0",
-		"adm-zip": "^0.5.10",
+		"@tensorflow/tfjs": "4.2.0",
+		"adm-zip": "0.5.10",
 		"ajv": "8.12.0",
 		"archiver": "6.0.0",
-		"argon2": "^0.31.1",
+		"argon2": "0.31.1",
 		"aws-sdk": "2.1413.0",
-		"axios": "^1.4.0",
+		"axios": "1.4.0",
 		"bcryptjs": "2.4.3",
 		"blurhash": "2.0.5",
 		"bull": "4.11.3",
 		"cacheable-lookup": "TheEssem/cacheable-lookup",
-		"cbor-x": "^1.5.4",
+		"cbor-x": "1.5.4",
 		"chalk": "5.3.0",
 		"chalk-template": "0.4.0",
-		"chokidar": "^3.5.3",
+		"chokidar": "3.5.3",
 		"cli-highlight": "2.1.11",
 		"color-convert": "2.0.1",
 		"content-disposition": "0.5.4",
 		"date-fns": "2.30.0",
-		"decompress": "^4.2.1",
+		"decompress": "4.2.1",
 		"deep-email-validator": "0.1.21",
 		"escape-regexp": "0.0.1",
 		"feed": "4.2.2",
 		"file-type": "18.5.0",
 		"fluent-ffmpeg": "2.1.2",
 		"got": "13.0.0",
-		"gunzip-maybe": "^1.4.2",
-		"happy-dom": "^11.0.2",
+		"gunzip-maybe": "1.4.2",
+		"happy-dom": "11.0.2",
 		"hpagent": "1.2.0",
 		"ioredis": "5.3.2",
 		"ip-cidr": "3.1.0",
@@ -73,7 +73,7 @@
 		"jsonld": "8.2.1",
 		"jsrsasign": "10.8.6",
 		"koa": "2.14.2",
-		"koa-body": "^6.0.1",
+		"koa-body": "6.0.1",
 		"koa-bodyparser": "4.4.1",
 		"koa-favicon": "2.1.0",
 		"koa-json-body": "5.3.0",
@@ -87,16 +87,16 @@
 		"meilisearch": "0.34.1",
 		"mfm-js": "0.23.3",
 		"mime-types": "2.1.35",
-		"msgpackr": "^1.9.9",
+		"msgpackr": "1.9.9",
 		"multer": "1.4.4-lts.1",
 		"native-utils": "link:native-utils",
 		"nested-property": "4.0.0",
 		"node-fetch": "3.3.2",
 		"nodemailer": "6.9.4",
 		"nsfwjs": "2.4.2",
-		"opencc-js": "^1.0.5",
+		"opencc-js": "1.0.5",
 		"os-utils": "0.0.14",
-		"otpauth": "^9.1.4",
+		"otpauth": "9.1.4",
 		"parse5": "7.1.2",
 		"pg": "8.11.3",
 		"private-ip": "3.0.1",
@@ -117,15 +117,15 @@
 		"sanitize-html": "2.11.0",
 		"semver": "7.5.4",
 		"sharp": "0.32.5",
-		"sonic-channel": "^1.3.1",
+		"sonic-channel": "1.3.1",
 		"stringz": "2.1.0",
 		"summaly": "2.7.0",
 		"syslog-pro": "1.0.0",
 		"systeminformation": "5.21.3",
-		"tar-stream": "^3.1.6",
-		"tesseract.js": "^4.1.1",
+		"tar-stream": "3.1.6",
+		"tesseract.js": "4.1.1",
 		"tinycolor2": "1.6.0",
-		"tinyld": "^1.3.4",
+		"tinyld": "1.3.4",
 		"tmp": "0.2.1",
 		"twemoji-parser": "14.0.0",
 		"typeorm": "0.3.17",
@@ -136,9 +136,9 @@
 		"xev": "3.0.2"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.62",
+		"@swc/cli": "0.1.62",
 		"@swc/core": "1.3.78",
-		"@types/adm-zip": "^0.5.0",
+		"@types/adm-zip": "0.5.0",
 		"@types/bcryptjs": "2.4.2",
 		"@types/escape-regexp": "0.0.1",
 		"@types/fluent-ffmpeg": "2.1.21",
@@ -160,7 +160,7 @@
 		"@types/node-fetch": "3.0.3",
 		"@types/nodemailer": "6.4.9",
 		"@types/oauth": "0.9.1",
-		"@types/probe-image-size": "^7.2.0",
+		"@types/probe-image-size": "7.2.0",
 		"@types/pug": "2.0.6",
 		"@types/punycode": "2.1.0",
 		"@types/qrcode": "1.5.1",
@@ -179,17 +179,17 @@
 		"@types/websocket": "1.0.5",
 		"@types/ws": "8.5.5",
 		"cross-env": "7.0.3",
-		"eslint": "^8.46.0",
+		"eslint": "8.46.0",
 		"execa": "6.1.0",
 		"json5-loader": "4.0.1",
 		"pug": "3.0.2",
 		"strict-event-emitter-types": "2.0.0",
-		"swc-loader": "^0.2.3",
+		"swc-loader": "0.2.3",
 		"ts-loader": "9.4.4",
 		"ts-node": "10.9.1",
 		"tsconfig-paths": "4.2.0",
 		"typescript": "5.1.6",
-		"webpack": "^5.88.2",
+		"webpack": "5.88.2",
 		"ws": "8.13.0"
 	}
 }
