--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,12 +11,12 @@
 	},
 	"devDependencies": {
 		"@discordapp/twemoji": "14.1.2",
-		"@eslint-sets/eslint-config-vue3": "^5.8.0",
-		"@eslint-sets/eslint-config-vue3-ts": "^3.3.0",
-		"@phosphor-icons/web": "^2.0.3",
+		"@eslint-sets/eslint-config-vue3": "5.8.0",
+		"@eslint-sets/eslint-config-vue3-ts": "3.3.0",
+		"@phosphor-icons/web": "2.0.3",
 		"@rollup/plugin-alias": "5.0.0",
 		"@rollup/plugin-json": "6.0.0",
-		"@rollup/pluginutils": "^5.0.4",
+		"@rollup/pluginutils": "5.0.4",
 		"@syuilo/aiscript": "0.11.1",
 		"@types/glob": "8.1.0",
 		"@types/gulp": "4.0.13",
@@ -38,21 +38,21 @@
 		"browser-image-resizer": "github:misskey-dev/browser-image-resizer",
 		"chart.js": "4.4.0",
 		"chartjs-adapter-date-fns": "3.0.0",
-		"chartjs-chart-matrix": "^2.0.1",
+		"chartjs-chart-matrix": "2.0.1",
 		"chartjs-plugin-gradient": "0.6.1",
 		"chartjs-plugin-zoom": "2.0.1",
-		"city-timezones": "^1.2.1",
+		"city-timezones": "1.2.1",
 		"cropperjs": "2.0.0-beta.4",
 		"date-fns": "2.30.0",
-		"emojilib": "^3.0.11",
+		"emojilib": "3.0.11",
 		"eslint-config-prettier": "9.0.0",
-		"eslint-plugin-file-progress": "^1.3.0",
+		"eslint-plugin-file-progress": "1.3.0",
 		"eventemitter3": "5.0.1",
-		"fast-blurhash": "^1.1.2",
+		"fast-blurhash": "1.1.2",
 		"firefish-js": "workspace:*",
-		"focus-trap": "^7.5.2",
-		"focus-trap-vue": "^4.0.2",
-		"gsap": "^3.12.2",
+		"focus-trap": "7.5.2",
+		"focus-trap-vue": "4.0.2",
+		"gsap": "3.12.2",
 		"idb-keyval": "6.2.1",
 		"insert-text-at-cursor": "0.3.0",
 		"json5": "2.2.3",
@@ -75,15 +75,15 @@
 		"three": "0.156.0",
 		"throttle-debounce": "5.0.0",
 		"tinycolor2": "1.6.0",
-		"tinyld": "^1.3.4",
+		"tinyld": "1.3.4",
 		"typescript": "5.2.2",
-		"unicode-emoji-json": "^0.4.0",
+		"unicode-emoji-json": "0.4.0",
 		"uuid": "9.0.0",
 		"vite": "4.4.9",
-		"vite-plugin-compression": "^0.5.1",
+		"vite-plugin-compression": "0.5.1",
 		"vue": "3.3.4",
-		"vue-draggable-plus": "^0.2.6",
-		"vue-plyr": "^7.0.0",
+		"vue-draggable-plus": "0.2.6",
+		"vue-plyr": "7.0.0",
 		"vue-prism-editor": "2.0.0-alpha.2"
 	}
 }
