--- a/packages/firefish-js/package.json
+++ b/packages/firefish-js/package.json
@@ -18,20 +18,20 @@
 		"url": "https://code.naskya.net/naskya/firefish.git"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.62",
+		"@swc/cli": "0.1.62",
 		"@swc/core": "1.3.78",
-		"@swc/types": "^0.1.5",
+		"@swc/types": "0.1.5",
 		"@types/node": "20.8.7",
 		"ts-node": "10.9.1",
-		"tsd": "^0.29.0",
+		"tsd": "0.29.0",
 		"typescript": "5.2.2"
 	},
 	"files": [
 		"built"
 	],
 	"dependencies": {
-		"eventemitter3": "^5.0.1",
-		"reconnecting": "^4.4.1"
+		"eventemitter3": "5.0.1",
+		"reconnecting": "4.4.1"
 	},
 	"optionalDependencies": {
 		"@swc/core-android-arm64": "1.3.11"
