--- a/packages/sw/package.json
+++ b/packages/sw/package.json
@@ -9,13 +9,13 @@
 		"format": "pnpm biome format * --write"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.62",
+		"@swc/cli": "0.1.62",
 		"@swc/core": "1.3.78",
 		"@swc/core-android-arm64": "1.3.11",
 		"firefish-js": "workspace:*",
-		"idb-keyval": "^6.2.1",
+		"idb-keyval": "6.2.1",
 		"vite": "4.4.9",
-		"vite-plugin-compression": "^0.5.1"
+		"vite-plugin-compression": "0.5.1"
 	},
 	"optionalDependencies": {
 		"@swc/core-android-arm64": "1.3.11"
