--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -32,6 +32,7 @@
 		"@koa/cors": "3.4.3",
 		"@koa/multer": "3.0.2",
 		"@koa/router": "9.0.1",
+		"@ladjs/koa-views": "9.0.0",
 		"@peertube/http-signature": "1.7.0",
 		"@redocly/openapi-core": "1.0.2",
 		"@sinonjs/fake-timers": "9.1.2",
@@ -82,7 +83,6 @@
 		"koa-remove-trailing-slashes": "2.0.3",
 		"koa-send": "5.0.1",
 		"koa-slow": "2.1.0",
-		"koa-views": "7.0.2",
 		"megalodon": "workspace:*",
 		"meilisearch": "0.34.1",
 		"mfm-js": "0.23.3",
@@ -152,12 +152,11 @@
 		"@types/koa-logger": "3.1.2",
 		"@types/koa-mount": "4.0.2",
 		"@types/koa-send": "4.1.3",
-		"@types/koa-views": "7.0.0",
 		"@types/koa__cors": "3.3.0",
 		"@types/koa__multer": "2.0.4",
 		"@types/koa__router": "8.0.11",
 		"@types/node": "18.11.18",
-		"@types/node-fetch": "3.0.3",
+		"@types/node-fetch": "2.6.8",
 		"@types/nodemailer": "6.4.9",
 		"@types/oauth": "0.9.1",
 		"@types/probe-image-size": "7.2.0",
@@ -167,7 +166,6 @@
 		"@types/qs": "6.9.7",
 		"@types/random-seed": "0.3.3",
 		"@types/ratelimiter": "3.4.4",
-		"@types/redis": "4.0.11",
 		"@types/rename": "1.0.4",
 		"@types/sanitize-html": "2.9.0",
 		"@types/semver": "7.5.0",
