--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
 		"migrateandstart": "pnpm run migrate && pnpm run start",
 		"gulp": "gulp build",
 		"watch": "pnpm run dev",
-		"dev": "pnpm node ./scripts/dev.js",
+		"dev": "pnpm node ./scripts/dev.mjs",
 		"dev:staging": "NODE_OPTIONS=--max_old_space_size=3072 NODE_ENV=development pnpm run build && pnpm run start",
 		"lint": "pnpm -r --parallel run lint",
 		"debug": "pnpm run build:debug && pnpm run start",
 		"build:debug": "pnpm -r --parallel run build:debug && pnpm run gulp",
 		"format": "pnpm -r --parallel run format",
-		"clean": "pnpm node ./scripts/clean.js",
-		"clean-all": "pnpm node ./scripts/clean-all.js",
+		"clean": "pnpm node ./scripts/clean.mjs",
+		"clean-all": "pnpm node ./scripts/clean-all.mjs",
 		"cleanall": "pnpm run clean-all"
 	},
 	"resolutions": {
