--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -40,7 +40,7 @@
 		"adm-zip": "0.5.10",
 		"ajv": "8.12.0",
 		"archiver": "6.0.1",
-		"argon2": "0.31.2",
+		"argon2": "^0.31.2",
 		"aws-sdk": "2.1498.0",
 		"axios": "1.6.2",
 		"bcryptjs": "2.4.3",
