--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,7 +18,7 @@
 		"@rollup/plugin-json": "6.0.1",
 		"@rollup/pluginutils": "5.0.5",
 		"@syuilo/aiscript": "0.16.0",
-		"@types/autosize": "4.0.3",
+		"@types/autosize": "^4.0.3",
 		"@types/glob": "8.1.0",
 		"@types/gulp": "4.0.17",
 		"@types/gulp-rename": "2.0.5",
@@ -49,7 +49,7 @@
 		"compare-versions": "6.1.0",
 		"cropperjs": "2.0.0-beta.4",
 		"date-fns": "2.30.0",
-		"emojilib": "3.0.11",
+		"emojilib": "^3.0.11",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-file-progress": "1.3.0",
 		"eventemitter3": "5.0.1",
@@ -80,15 +80,15 @@
 		"three": "0.158.0",
 		"throttle-debounce": "5.0.0",
 		"tinycolor2": "1.6.0",
-		"tinyld": "1.3.4",
+		"tinyld": "^1.3.4",
 		"typescript": "5.2.2",
 		"unicode-emoji-json": "0.4.0",
 		"uuid": "9.0.1",
 		"vite": "5.0.0",
 		"vite-plugin-compression": "0.5.1",
 		"vue": "3.3.8",
-		"vue-draggable-plus": "0.2.7",
-		"vue-plyr": "7.0.0",
+		"vue-draggable-plus": "^0.2.7",
+		"vue-plyr": "^7.0.0",
 		"vue-prism-editor": "2.0.0-alpha.2"
 	}
 }
