--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "firefish",
-	"version": "1.0.5-dev22",
+	"version": "1.0.5-rc",
 	"codename": "aqua",
 	"repository": {
 		"type": "git",
