--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 		"debug": "pnpm run build:debug && pnpm run start",
 		"build:debug": "pnpm clean && pnpm --filter firefish-js run build:types && pnpm -r --parallel run build:debug && pnpm run gulp",
 		"format": "pnpm -r --parallel run format",
-		"clean": "pnpm node ./scripts/clean.mjs",
-		"clean-all": "pnpm node ./scripts/clean-all.mjs",
+		"clean": "pnpm node ./scripts/clean-built.mjs",
+		"clean-cargo": "pnpm node ./scripts/clean-cargo.mjs",
+		"clean-npm": "pnpm node ./scripts/clean-npm.mjs",
+		"clean-all": "pnpm run clean && pnpm run claen-cargo && pnpm run clean-npm",
 		"cleanall": "pnpm run clean-all"
 	},
 	"resolutions": {
