--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -62,6 +62,7 @@
 		"feed": "4.2.2",
 		"file-type": "18.7.0",
 		"fluent-ffmpeg": "2.1.2",
+		"firefish-js": "workspace:*",
 		"got": "13.0.0",
 		"gunzip-maybe": "1.4.2",
 		"happy-dom": "12.10.3",
@@ -125,7 +126,6 @@
 		"tar-stream": "3.1.6",
 		"tesseract.js": "5.0.3",
 		"tinycolor2": "1.6.0",
-		"tinyld": "1.3.4",
 		"tmp": "0.2.1",
 		"typeorm": "0.3.17",
 		"ulid": "2.3.0",
