--- a/packages/backend/.swcrc
+++ b/packages/backend/.swcrc
@@ -11,7 +11,8 @@
 			"decoratorMetadata": true
 		},
 		"experimental": {
-			"keepImportAssertions": true
+			"keepImportAssertions": true,
+			"emitAssertForImportAttributes": true
 		},
 		"baseUrl": ".",
 		"paths": {
