--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -57,6 +57,7 @@
 		"date-fns": "3.0.6",
 		"decompress": "4.2.1",
 		"deep-email-validator": "0.1.21",
+		"deepl-node": "1.11.0",
 		"escape-regexp": "0.0.1",
 		"feed": "4.2.2",
 		"file-type": "18.7.0",
