--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   web:
-    image: docker.io/naskya/firefish
+    image: registry.code.naskya.net/naskya/firefish
     container_name: firefish_web
     restart: unless-stopped
     depends_on:
