--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 /.config/*
 !/.config/example.yml
 !/.config/devenv.yml
-!/.config/docker_example.env
+!/.config/docker.example.env
 !/.config/docker_ci.env
 !/.config/helm_values_example.yml
 !/.config/LICENSE
